[package]
name = "keetree"
version = "0.0.1"
edition = "2021"
description = "A lightweight and fast router with no_std support."
license-file = "LICENSE"
categories = ["network-programming", "algorithms"]
keywords = ["router", "path", "tree"]
repository = "https://github.com/leifu1128/keetree"
readme = "README.md"

[features]
default = ["std"]
std = ["regex/std"]

[dependencies]
regex = { version = "1.10.2", features = ["perf", "unicode"], default-features = false }
hashbrown = { version = "0.14.3", features = ["ahash", "inline-more"], default-features = false }
# rkyv = "0.7.43"

[dev-dependencies]
matchit = "0.7.3"
criterion = "0.5.1"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = true
lto = true
codegen-units = 1

[[bench]]
name = "bench"
harness = false